# elasticube

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  OBJECT_STORAGE_QUICKSTART.md  README.md
.github/workflows/: release.yml
docs/: API_REVIEW.md  API_REVIEW_STATUS.md  USER_GUIDE.md
elasticube-core/: Cargo.toml
elasticube-core/src/: builder.rs  cache.rs  error.rs  lib.rs  optimization.rs  query.rs  sources.rs
elasticube-core/src/cube/: mod.rs  schema.rs  updates.rs
elasticube-py/: Cargo.toml  pyproject.toml
elasticube-py/python/elasticube/: __init__.py  __init__.pyi
elasticube-py/src/: lib.rs
examples/: README.md  basic_cube_building.rs  calculated_fields_demo.rs  data_updates_demo.rs  multi_source_demo.rs  object_storage_demo.rs  query_demo.rs  query_materialization_demo.rs  sales_analytics.rs  time_series_analysis.rs
examples/python/: README.md  dataframe_loading_example.py  elasticube_tutorial.ipynb  polars_demo.py  query_demo.py  sales_data.csv  serialization_demo.py  simple_test.py  streaming_dataframes_example.py  visualization_demo.py
